// Vitest Snapshot v1

exports[`matches snapshot defence reaction phase 1`] = `
<div>
  <div
    class="_phaseWidget_58c017"
  >
    <div
      class="_icon_58c017"
      style="left: 7.08em;"
    />
  </div>
</div>
`;

exports[`matches snapshot main phase 1`] = `
<div>
  <div
    class="_phaseWidget_58c017"
  >
    <div
      class="_icon_58c017"
      style="left: 0.42em;"
    />
  </div>
</div>
`;
